--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,8 @@
 /configure.ac -text
 corpus/kan.tagged -text
 /modes.xml -text
+*.dix linguist-language=XML linguist-detectable=true
+*.lrx linguist-language=XML linguist-detectable=true
+*.lsx linguist-language=XML linguist-detectable=true
+*.tsx linguist-language=XML linguist-detectable=true
+*.t[[:digit:]]x linguist-language=XML linguist-detectable=true
