--- a/Makefile.am
+++ b/Makefile.am
@@ -8,8 +8,10 @@ LANG1=kan
 BASENAME=apertium-$(LANG1)
 
 TARGETS_COMMON =			\
+	$(LANG1).automorf.hfst		\
 	$(LANG1).automorf.bin		\
 	$(LANG1).automorf.att.gz	\
+	$(LANG1).autogen.hfst		\
 	$(LANG1).autogen.bin		\
 	$(LANG1).autogen.att.gz		\
 	$(LANG1).autopgen.bin		\
@@ -23,22 +25,63 @@ TARGETS_COMMON =			\
 ## Kannada transducer
 ###############################################################################
 
-$(LANG1).autogen.bin: $(BASENAME).$(LANG1).dix .deps/.d
-	apertium-validate-dictionary $<
-	lt-comp rl $< $@ $(BASENAME).$(LANG1).acx
+.deps/$(LANG1).twol.hfst: $(BASENAME).$(LANG1).twol .deps/.d
+	hfst-twolc $< -o $@
 
-$(LANG1).automorf.bin: $(BASENAME).$(LANG1).dix
-	apertium-validate-dictionary $<
-	lt-comp lr $< $@ $(BASENAME).$(LANG1).acx
+.deps/$(LANG1).RL.lexc: $(BASENAME).$(LANG1).lexc .deps/.d
+	cat $< | grep -v 'Dir/LR' > $@
 
-$(LANG1).autogen.att.gz: $(LANG1).autogen.bin
-	lt-print $< | gzip -9 -c -n > $@
+.deps/$(LANG1).LR.lexc: $(BASENAME).$(LANG1).lexc .deps/.d
+	cat $< | grep -v 'Dir/RL' > $@
 
-$(LANG1).automorf.att.gz: $(LANG1).automorf.bin
-	lt-print $< | gzip -9 -c -n > $@
+.deps/$(LANG1).RL.lexc.hfst: .deps/$(LANG1).RL.lexc
+	hfst-lexc $< -o $@ -v
+
+.deps/$(LANG1).LR.lexc.hfst: .deps/$(LANG1).LR.lexc
+	hfst-lexc $< -o $@ -v
+
+.deps/$(LANG1).RL.hfst: .deps/$(LANG1).RL.lexc.hfst .deps/$(LANG1).twol.hfst
+	hfst-compose-intersect -1 .deps/$(LANG1).RL.lexc.hfst -2 .deps/$(LANG1).twol.hfst -o $@
+
+.deps/$(LANG1).LR.hfst: .deps/$(LANG1).LR.lexc.hfst .deps/$(LANG1).twol.hfst
+	hfst-compose-intersect -1 .deps/$(LANG1).LR.lexc.hfst -2 .deps/$(LANG1).twol.hfst -o $@
+
+$(LANG1).autogen.hfst: .deps/$(LANG1).RL.hfst
+	hfst-fst2fst -O $< -o $@
+
+$(LANG1).automorf.hfst: .deps/$(LANG1).LR.hfst
+	hfst-invert $< | hfst-fst2fst -O -o $@
+
+$(LANG1).autogen.att.gz: $(LANG1).autogen.hfst
+	hfst-fst2txt $< | gzip -9 -c -n > $@
+
+$(LANG1).automorf.att.gz: $(LANG1).automorf.hfst
+	hfst-fst2txt $< | gzip -9 -c -n > $@
+
+$(LANG1).autogen.bin: $(LANG1).autogen.att.gz .deps/.d
+	zcat < $< > .deps/$(LANG1).autogen.att
+	lt-comp lr .deps/$(LANG1).autogen.att $@
+
+$(LANG1).automorf.bin: $(LANG1).automorf.att.gz .deps/.d
+	zcat < $< > .deps/$(LANG1).automorf.att
+	lt-comp lr .deps/$(LANG1).automorf.att $@
 
 $(LANG1).autopgen.bin: $(BASENAME).post-$(LANG1).dix
 	lt-comp lr $< $@
+
+###############################################################################
+## Debugging transducers (for testvoc)
+###############################################################################
+
+debug: .deps/$(LANG1).LR-debug.hfst .deps/$(LANG1).lexc.hfst
+
+.deps/$(LANG1).LR-debug.hfst: $(BASENAME).$(LANG1).lexc .deps/.d
+	cat $< | grep -v 'Dir/RL' | grep -v 'Use/Circ' > .deps/$(LANG1).LR-debug.lexc
+	hfst-lexc .deps/$(LANG1).LR-debug.lexc -o .deps/$(LANG1).LR-debug.lexc.hfst -v
+	hfst-compose-intersect -1 .deps/$(LANG1).LR-debug.lexc.hfst -2 .deps/$(LANG1).twol.hfst -o $@
+
+.deps/$(LANG1).lexc.hfst: .deps/$(LANG1).RL.lexc.hfst
+	hfst-fst2fst -O -i $< -o $@
 
 ###############################################################################
 ## Disambiguation rules
@@ -46,6 +89,36 @@ $(LANG1).autopgen.bin: $(BASENAME).post-$(LANG1).dix
 
 $(LANG1).rlx.bin: $(BASENAME).$(LANG1).rlx $(CGCOMP)
 	$(CGCOMP) $< $@
+
+###############################################################################
+## Spell checker
+###############################################################################
+
+$(LANG1).zhfst: .deps/acceptor.default.hfst .deps/errmodel.default.hfst
+	rm -f $@
+	zip -j $@ .deps/acceptor.default.hfst .deps/errmodel.default.hfst speller/index.xml
+
+.deps/errmodel.default.hfst: .deps/words.default.hfst .deps/strings.default.hfst
+	python dev/editdist.py -v -s -d 1 -e '@0@' -i speller/editdist.default.txt -a .deps/acceptor.default.hfst \
+	| hfst-txt2fst  -e '@0@' -o .deps/editdist.default.hfst
+	hfst-disjunct .deps/strings.default.hfst .deps/editdist.default.hfst \
+	| hfst-minimise | hfst-repeat -f 1 -t 2 -o .deps/editstrings.default.hfst
+	hfst-disjunct .deps/words.default.hfst .deps/editstrings.default.hfst \
+	| hfst-fst2fst  -f olw -o $@
+
+.deps/words.default.hfst: speller/words.default.txt
+	grep -v -e "^#" -e "^$$" $< | hfst-strings2fst  -j -o $@
+
+.deps/strings.default.hfst: speller/strings.default.txt .deps/anystar.hfst
+	grep -v -e "^#" -e "^$$" $< | hfst-strings2fst  -j | hfst-concatenate .deps/anystar.hfst - |\
+	hfst-concatenate - .deps/anystar.hfst -o $@
+
+.deps/anystar.hfst:
+	echo "?*;" | hfst-regexp2fst -S -o $@
+
+.deps/acceptor.default.hfst: $(LANG1).autogen.hfst
+	cat $< | hfst-fst2fst -t | hfst-project  --project=lower | hfst-minimise |hfst-fst2fst  -f olw -o $@
+
 
 ###############################################################################
 ## Unigram tagger
@@ -57,8 +130,9 @@ $(LANG1).prob: corpus/$(LANG1).tagged
 ###############################################################################
 ## Distribution
 ###############################################################################
-EXTRA_DIST=$(BASENAME).$(LANG1).dix		\
-		$(BASENAME).$(LANG1).acx	\
+
+EXTRA_DIST=$(BASENAME).$(LANG1).lexc		\
+		$(BASENAME).$(LANG1).twol	\
 		$(BASENAME).$(LANG1).rlx	\
 		$(BASENAME).post-$(LANG1).dix	\
 		$(LANG1).prob			\
@@ -74,24 +148,29 @@ EXTRA_DIST=$(BASENAME).$(LANG1).dix		\
 apertium_kandir=$(prefix)/share/apertium/$(BASENAME)/
 apertium_kan_srcdir=$(prefix)/share/apertium/$(BASENAME)/
 
-apertium_kan_DATA=$(TARGETS_COMMON)
+EXTRA_TARGETS=
+
+if HAVE_HFSTOSPELL
+EXTRA_TARGETS += $(LANG1).zhfst
+endif # HAVE_HFSTOSPELL
+
+apertium_kan_DATA=$(TARGETS_COMMON) $(EXTRA_TARGETS)
 
 pkgconfigdir = $(prefix)/share/pkgconfig
 pkgconfig_DATA = $(BASENAME).pc
-
-# Modes are not installed since they're all just "debug modes". All
-# modes are created by this goal.
-modes/$(LANG1)-morph.mode: modes.xml
-	apertium-validate-modes modes.xml
-	apertium-gen-modes modes.xml
 
 noinst_DATA=modes/$(LANG1)-morph.mode
 
 install-data-local: install-modes
 	test -d $(DESTDIR)$(apertium_kan_srcdir) || mkdir -p $(DESTDIR)$(apertium_kan_srcdir)
-	$(INSTALL_DATA) $(BASENAME).$(LANG1).dix $(DESTDIR)$(apertium_kan_srcdir)
+	$(INSTALL_DATA) $(BASENAME).$(LANG1).lexc $(DESTDIR)$(apertium_kan_srcdir)
+	$(INSTALL_DATA) $(BASENAME).$(LANG1).twol $(DESTDIR)$(apertium_kan_srcdir)
 	$(INSTALL_DATA) $(BASENAME).$(LANG1).rlx $(DESTDIR)$(apertium_kan_srcdir)
 	$(INSTALL_DATA) $(BASENAME).post-$(LANG1).dix $(DESTDIR)$(apertium_kan_srcdir)
+
+###############################################################################
+## Cleanup
+###############################################################################
 
 CLEANFILES = $(TARGETS_COMMON)
 clean-local:
